made a change to the database to make passwordResetTokens unique, allowing for us to search a user by this value to securely update their password
